--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
   padding: 20px 0;
   width: 1025px;
   margin: 0 auto;
+  max-width: 100%;
 }
 .box {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .box-pink {
   width: 33%;
@@ -22,4 +24,40 @@ body {
   width: 33%;
   height: 200px;
   background-color: green;
+}
+.text {
+  /* width: 100%;
+  max-width: 100%; */
+}
+/* pc */
+@media only screen and (min-width: 1024px) {
+}
+
+/* tablet */
+@media only screen and (min-width: 740px) and (max-width: 1023px) {
+  .box-pink {
+    width: 50%;
+  }
+  .box-red {
+    width: 50%;
+  }
+  .box-green {
+    width: 50%;
+  }
+}
+
+/* mobile */
+@media only screen and (max-width: 739px) {
+  .box-pink {
+    width: 100%;
+  }
+  .box-red {
+    width: 100%;
+  }
+  .box-green {
+    width: 100%;
+  }
+  .text {
+    font-size: 20px;
+  }
 }
