--- a/grid.css
+++ b/grid.css
@@ -139,9 +139,9 @@
 
 /* Tablet  */
 @media only screen and (min-width: 740px) and (max-width: 1023px) {
-  .wide {
+  /* .wide {
     width: 644px;
-  }
+  } */
 
   .row {
     margin: 0 -8px;
